<resources>
    <string name="app_name">Direc</string>
    <string name="time">00.00</string>
    <string name="name">Nama</string>
    <string name="usia">Usia</string>
    <string name="usia_terisi">%s Tahun</string>
    <string name="search">Cari</string>
    <string name="tanggal">Tanggal</string>
    <string name="dashboard">Dasbor</string>
    <string name="riwayat_kosong">Belum ada riwayat rekam data</string>
    <string name="tambah_pasien_baru">Tambah Pasien Baru</string>
    <string name="ubah_data_pasien">Ubah Data Pasien</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="masukkan_biodata_pasien_anda">masukkan biodata pasien anda</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="name_lengkap">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="masuk">Masuk</string>
    <string name="keluhan_title">Keluhan</string>
    <string name="hasil_pemeriksaan_title">Hasil Pemeriksaan</string>
    <string name="hasil_pemeriksaan">Hasil Pemeriksaan</string>
    <string name="terapi_title">Terapi</string>
    <string name="terapi">Terapi</string>
    <string name="foto_title">Foto</string>
    <string name="filter">Filter</string>
    <string name="pencarian_fail">Maaf, pencarian tidak ditemukan</string>
    <string name="tambah_data_title">Tambah Data</string>
    <string name="masukkan_rekam_data_pasien_anda">masukkan rekam data pasien anda</string>
    <string name="tambah_data_pasien">Tambah Data Pasien</string>
    <string name="tanggal_periksa">Tanggal Periksa</string>
    <string name="add_pasien">Tambah Pasien</string>
    <string name="gender_laki">Laki - laki</string>
    <string name="gender_perempuan">Perempuan</string>
    <string name="detail_pasien">Detail Pasien</string>
    <string name="nav_open">Buka</string>
    <string name="nav_close">Tutup</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="anda_yakin_akan_menghapus_data_ini">Anda yakin akan menghapus data ini ?</string>
    <string name="item_akan_dihapus_secara_permanen">item akan dihapus secara permanen</string>
    <string name="tidak">Tidak</string>
    <string name="hari">Hari</string>
    <string name="kalender">Kalender</string>
    <string name="masukkan_nama_lengkap">Masukkan nama lengkap</string>
    <string name="masukkan_nomor_telepon">Masukkan nomor telepon</string>
    <string name="masukkan_alamat">Masukkan alamat</string>
    <string name="masukkan_tanggal_lahir">Masukkan tanggal lahir</string>
    <string name="header">Header</string>
    <string name="lapor_error">Lapor Error</string>
    <string name="subjek_laporan">Subjek</string>
    <string name="isi_subjek">Masukkan subjek laporan</string>
    <string name="detail_error">Detail Error</string>
    <string name="isi_detail">Masukkan detail error</string>
    <string name="kirim">Kirim</string>
    <string name="log_out">Keluar</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="penyakit_title">Penyakit</string>
    <string name="penyakit_katarak">Katarak</string>
    <string name="penyakit_pterygium">Pterygium</string>
    <string name="penyakit_hordeolum">Hordeolum</string>
    <string name="penyakit_Uveitis">Uveitis</string>
    <string name="penyakit_poag">POAG</string>
    <string name="penyakit_pacg">PACG</string>
    <string name="penyakit_kelainan_refraksi">Kelainan Refraksi</string>
    <string name="penyakit_lainnya">Lainnya</string>
    <string name="jumlah_tagihan_title">Jumlah Tagihan</string>
    <string name="pemeriksa_title">Pemeriksa</string>
    <string name="tagihan_title">Tagihan</string>
    <string name="minimum_tagihan">100000</string>
    <string name="sampai">sampai</string>
    <string name="banyak_data">Banyak Data</string>
    <string name="banyak_data_info">Terdapat %d data untuk diagnosa ini.</string>
    <string name="export_rekam_data">Export Rekam Data</string>
    <string name="export_rekam_data_info">Hasil rekam data akan diexport dalam bentuk xls.</string>
    <string name="export">Export</string>
    <string name="cancel">Batal</string>
    <string name="tambah_skema_1">Tambah Skema 1</string>
    <string name="tambah_skema_2">Tambah Skema 2</string>
    <string name="ganti_skema_1">Ganti Skema 1</string>
    <string name="ganti_skema_2">Ganti Skema 2</string>
    <string name="tahan_untuk_menghapus">*Tahan untuk menghapus</string>
    <string name="gambar_skema_2">Gambar Skema 2</string>
    <string name="tambah_gambar">Tambah Gambar</string>
    <string name="gambar_skema_1">Gambar Skema 1</string>
    <string name="skema_title">Skema</string>
    <string name="penyakit_ulkus_kornea">Ulkus Kornea</string>
    <string name="penyakit_dry_eye_disease">Dry Eye Disease</string>
    <string name="id">ID</string>

</resources>