<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    tools:context=".ui.detail.dialogadddata.DialogUpdateDataActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/DialogStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/TextActionBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/ubah_data" />

            <TextView
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/pemeriksa_title" />

            <TextView
                android:id="@+id/tv_pemeriksa"
                style="@style/TextCardViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="dr. Trianggah Dewi Sp.M" />

            <TextView
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/penyakit_title" />

            <Spinner
                android:id="@+id/spinner_penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/style_spinner"
                android:popupBackground="@color/white" />

            <TextView
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/masukkan_rekam_data_pasien_anda" />

            <TextView
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/keluhan_title" />

            <EditText
                style="@style/TextCardViewContentBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keluhan_title"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext" />

            <TextView
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/hasil_pemeriksaan_title"/>

            <EditText
                style="@style/TextCardViewContentBlack"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:maxLines="50"
                android:hint="@string/hasil_pemeriksaan"
                android:gravity="top|left"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext" />

            <TextView
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/terapi_title" />

            <EditText
                style="@style/TextCardViewContentBlack"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:maxLines="50"
                android:hint="@string/terapi"
                android:gravity="top|left"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext" />

            <TextView
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/foto_title" />

            <TextView
                android:id="@+id/tb_add_scheme1"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:text="@string/tambah_skema_1" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_scheme1"
                    android:layout_width="match_parent"
                    android:layout_height="116dp"
                    android:contentDescription="@string/gambar_skema_1"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tb_add_scheme2"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/tambah_skema_2" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_scheme2"
                    android:layout_width="match_parent"
                    android:layout_height="116dp"
                    android:contentDescription="@string/gambar_skema_2"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="52dp">

                <ImageButton
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/icon_add_photo"
                    android:background="@drawable/bg_add_photo_button"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    style="@style/TextCardViewItallic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="4dp"
                    android:text="@string/tahan_untuk_menghapus" />

                <TextView
                    style="@style/TextCardViewContentBilling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/jumlah_tagihan_title" />

                <EditText
                    android:id="@+id/et_tagihan"
                    style="@style/TextCardViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="end"
                    android:importantForAutofill="no"
                    android:inputType="number" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:background="@drawable/gradient_button_masuk"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="visible" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>