<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pasien"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_nama"
                style="@style/TextCardViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="16dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/tv_usia"
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usia"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:id="@+id/tv_gender"
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:id="@+id/tv_telepon"
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor_telepon" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>