<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    tools:context=".ui.detail.dialogdeletedata.DialogDeleteDataActiivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="36dp"
        style="@style/DialogStyle"
        android:gravity="center">

        <TextView
            style="@style/TextCardViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/anda_yakin_akan_menghapus_data_ini"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextCardViewContentGrey"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/item_akan_dihapus_secara_permanen"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/hapus"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/lato_black"
                android:textAllCaps="false"
                android:background="@drawable/bg_hapus_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:text="@string/tidak"
                android:textColor="@color/direc_green_dark"
                android:textSize="14sp"
                android:fontFamily="@font/lato_black"
                android:textAllCaps="false"
                android:background="@drawable/bg_tidak_button"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>