<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            tools:src="@color/direc_grey" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/CardViewStyle"
        android:layout_toEndOf="@id/iv_line">

        <ImageButton
            android:id="@+id/ib_edit_down"
            style="@style/IconActionBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:src="@drawable/icon_dropdown_button_small"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="top|right"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_keluhan_title"
                style="@style/TextCardViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keluhan_title" />

            <TextView
                android:id="@+id/tv_keluhan"
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keluhan_title" />

            <TextView
                android:id="@+id/tv_hasil_periksa_title"
                style="@style/TextCardViewTitle"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_pemeriksaan_title" />

            <TextView
                android:id="@+id/tv_hasil_periksa"
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_pemeriksaan" />

            <TextView
                android:id="@+id/tv_terapi_title"
                style="@style/TextCardViewTitle"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terapi_title" />

            <TextView
                android:id="@+id/tv_terapi"
                style="@style/TextCardViewContentGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terapi" />

            <TextView
                android:id="@+id/tv_foto"
                style="@style/TextCardViewTitle"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_photo"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>