<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_time"
        style="@style/TextCardViewContentBlack"
        android:layout_width="wrap_content"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pasien"
        style="@style/CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle_icon">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_nama"
                style="@style/TextCardViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_usia"
                style="@style/TextCardViewContentBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/usia" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:src="@color/direc_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/circle_icon"
        app:layout_constraintStart_toStartOf="@+id/circle_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_icon"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="12dp"
        android:src="@color/direc_grey"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />
</androidx.constraintlayout.widget.ConstraintLayout>